# rehacomp-learning

./: .gitignore  LICENSE  README.md  docker-compose.yml  makefile  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  test_on_push.yaml
config/: envvars.template
locale/ru/LC_MESSAGES/: django.po
scripts/: create_dev_database.sql
server/: asgi.py  exceptions.py  urls.py  utils.py  wsgi.py
server/apps/accounts/: __init__.py  apps.py  dto.py  dto_types.py  entities.py  exceptions.py  forms.py  helpers.py  implemented.py  interfaces.py  repositories.py  services.py  urls.py  usecases.py  views.py
server/apps/accounts/implemented/: __init__.py  signup.py
server/apps/accounts/infrastructure/: models.py
server/apps/accounts/logic/: dto_types.py  exceptions.py  helpers.py  implemented.py
server/apps/accounts/views/: __init__.py  common_constants.py  login_user.py  logout_user.py  register_user.py
server/apps/base_client_features/: apps.py
server/apps/base_client_features/templates/: base.html
server/apps/common/: constants.py  models.py  services.py
server/apps/common/migrations/: 0001_vos_organization_model.py  0002_course_model.py  0003_person_model.py  0004_initial_data.py  initial_data.json
server/apps/core/: __init__.py  apps.py  business_error_types.py  constants.py  exceptions.py  implemented.py  models.py  repositories.py  services.py  shared_constants.py  urls.py  value_objects.py  views.py
server/apps/core/domain/: entities.py  enum_types.py  exceptions.py  value_objects.py
server/apps/core/infrastructure/: repositories.py
server/apps/core/interfaces/: repositories.py
server/apps/core/migrations/: 0001_vos_organization_model.py  0002_course_model.py  0003_person_model.py  0004_checks_for_person_model.py  0004_foreign_key_constraint_for_person_model.py  0005_related_organization_for_person.py
server/apps/core/protocols/: repositories.py  results.py
server/apps/core/repositories/: course.py
server/apps/learning/: admin.py  apps.py  models.py  shared_constants.py  urls.py  views.py
server/apps/learning/migrations/: 0001_vos_organization_model.py  0002_course_model.py  0003_initial_data.py  0003_person_model.py  0004_foreign_key_constraint_for_person_model.py  initial_data.json
server/apps/learning/models/: __init__.py  common_models.py  person.py
server/apps/learning_requests/: __init__.py  admin.py  apps.py  constants.py  dto.py  entities.py  helpers.py  models.py  registry.py  urls.py  views.py
server/apps/learning_requests/admin/: forms.py  model_presentation.py
server/apps/learning_requests/domain/: constants.py  entities.py  enum_types.py  exceptions.py  value_objects.py
server/apps/main/: __init__.py  apps.py  urls.py  views.py
server/apps/main/templates/: base.html
server/apps/request_folders/: admin.py  apps.py  forms.py  models.py  registry.py  urls.py  views.py
server/apps/ui_client/: __init__.py  apps.py
server/common/: django_tools.py  domain.py  exceptions.py  helpers.py  infrastructure.py  protocols.py  types.py  utils.py
server/common/django/: enhancements.py  views.py
server/common/django_enhancements/: fields.py  http.py  templates.py
server/common_tools/: interfaces.py
server/core/: infrastructure.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  csp.py  database.py  logging.py  ui.py
server/settings/environments/: development.py  production.py
server/utilites/: django_tools.py
server/utilites/common/: types.py
tests/: conftest.py  test_url_patterns.py  test_utils.py
tests/plugins/: accounts_fixtures.py  common_fixtures.py  django_settings.py
tests/test_apps/test_accounts/: test_accounts_urls.py  test_forms.py  test_views.py
tests/test_apps/test_common/: test_migrations.py  test_services.py
tests/test_apps/test_core/: test_migrations.py  test_models.py  test_services.py  test_value_objects.py
tests/test_apps/test_learning/: test_migrations.py  test_models.py
tests/test_apps/test_learning_requests/: test_helpers.py  test_lr_migrations.py
tests/test_apps/test_main/: test_main_urls.py
tests/test_server/: test_url_patterns.py  test_urls.py
tests/test_server/test_common/: test_django_tools.py  test_types.py
tests/test_server/test_common_tools/: test_types.py
tests/test_server/test_utilites/: test_django_tools.py
(+98 files in other folders)
