[tool.poetry]
name = "rehacomp-learning"
version = "0.1.0"
description = "learning management system for rehacomp"
authors = ["Evgeniy Tulyakov <e.v.tulyakov1998@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Private :: Do not Upload",
]


[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["argon2"], version = "^4.2.7"}
django-split-settings = "^1.2.0"
django-axes = "^6.1.1"
django-csp = "^3.7"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.18.0"
django-health-check = "^3.17.0"
django-stubs-ext = "^4.2.5"
dump-env = "^1.4.0"
python-decouple = "^3.8"
pytz = "^2023.3.post1"
psycopg = {extras = ["binary"], version = "^3.1.13"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-annotations-complexity = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-clean-block = "^0.1.2"
flake8-expression-complexity = "^0.0.11"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.3.2"
flake8-variables-names = "^0.0.6"
mypy = "^1.7.1"
django-stubs = "^4.2.6"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
dotenv-linter = "^0.4.0"
pytest-cov = "^4.1.0"
covdefaults = "^2.3.0"
django-coverage-plugin = "^3.1.0"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.2.0"
django-test-migrations = "^1.3.0"
hypothesis = "^6.91.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
