[tool.poetry]
name = "rehacomp-learning"
version = "0.1.0"
description = "learning management system for rehacomp"
authors = ["Evgeniy Tulyakov <e.v.tulyakov1998@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Private :: Do not Upload",
]


[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["argon2"], version = "^5.0.3"}
django-split-settings = "^1.3.0"
django-axes = "^6.4.0"
django-csp = "^3.8"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.19.0"
django-health-check = "^3.18.1"
dump-env = "^1.4.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.1.18"}
punq = "^0.7.0"
ulid-py = "^1.1.0"
returns = "^0.23.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-annotations-complexity = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-clean-block = "^0.1.2"
flake8-expression-complexity = "^0.0.11"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
flake8-variables-names = "^0.0.6"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
dotenv-linter = "^0.5.0"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
django-test-migrations = "^1.3.0"
hypothesis = "^6.99.6"
ipython = "^8.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
