[tool.poetry]
name = "rehacomp-learning"
version = "0.1.0"
description = "learning management system for rehacomp"
authors = ["Evgeniy Tulyakov <e.v.tulyakov1998@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
classifiers = [
  "Private :: Do not Upload",
]


[tool.poetry.dependencies]
python = "^3.13"

django = {extras = ["argon2"], version = "^5.1.4"}
django-split-settings = "^1.3.2"
django-axes = "^7.0.1"
django-csp = "^3.8"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.24.0"
django-health-check = "^3.18.3"
django-htmx = "^1.21.0"
wheel = "^0.45.1"
dump-env = "^1.5.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
punq = "^0.7.0"
ulid-py = "^1.1.0"
returns = "^0.24.0"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-annotations-complexity = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-clean-block = "^0.1.2"
flake8-expression-complexity = "^0.0.11"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
flake8-variables-names = "^0.0.6"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-randomly = "^3.16.0"
pytest-timeout = "^2.3.1"
dotenv-linter = "^0.5.0"
hypothesis = "^6.123.17"
ipython = "^8.31.0"
django-test-migrations = "^1.4.0"
django-debug-toolbar = "^5.0.1"
django-migration-linter = "^5.1.0"
django-extra-checks = "^0.16.1"
django-query-counter = "^0.4.0"
nplusone = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
